[S12P31A202-592] feat: Add multy shift feature and make duty more satisfy